deploy/oaas-single-node/cds.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-delivery-service
  labels:
    app: content-delivery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-delivery-service
  template:
    metadata:
      labels:
        app: content-delivery-service
    spec:
      containers:
        - name: content-delivery-service
          image: nginx:1.21
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: conf
              subPath: nginx.conf
      volumes:
        - name: conf
          configMap:
            name: nginx-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: content-delivery-service
spec:
  selector:
    app: content-delivery-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
