deploy/oaas-single-node/sa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-adapter
  labels:
    app: storage-adapter
    platform: oaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-adapter
      platform: oaas
  template:
    metadata:
      labels:
        app: storage-adapter
        platform: oaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: storage-adapter
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: storage-adapter
          image: ghcr.io/hpcclab/oaas/storage-adapter:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: '1'
              memory: 256M
            requests:
              cpu: '0.125'
              memory: 128M
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: storage-adapter
  labels:
    app: storage-adapter
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  selector:
    app: storage-adapter
    platform: oaas
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
