deploy/oaas-single-node/tm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager
  labels:
    app: task-manager
    platform: oaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager
      platform: oaas
  template:
    metadata:
      labels:
        app: task-manager
        platform: oaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: task-manager
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: task-manager
          image: ghcr.io/hpcclab/oaas/task-manager
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: '1'
              memory: 256M
            requests:
              cpu: '0.125'
              memory: 128M
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
