deploy/oaas-single-node/oaas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oaas-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "oc.oaas.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: object-controller
                port:
                  number: 80
    - host: "tm.oaas.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: task-manager
                port:
                  number: 80
    - host: "cds.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: content-delivery-service
                port:
                  number: 80
